Episode 16: Removed all Java 13 preview feature usage and now compiles with Java 11
Updated Spring Boot to 2.2.3